After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696151 - empathy crashed with SIGSEGV in listing_failed_cb()
empathy crashed with SIGSEGV in listing_failed_cb()
Status: RESOLVED FIXED
Product: empathy
Classification: Core
Component: General
3.6.x
Other Linux
: Normal critical
: ---
Assigned To: empathy-maint
empathy-maint
Depends on:
Blocks:
 
 
Reported: 2013-03-19 17:02 UTC by Bilal Shahid
Modified: 2013-05-24 13:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
new-chatroom-dialog: use tp_g_signal_connect_object() (1.46 KB, patch)
2013-05-24 13:30 UTC, Guillaume Desmottes
none Details | Review

Description Bilal Shahid 2013-03-19 17:02:58 UTC
Originally reported at:
  https://bugs.launchpad.net/bugs/1138829

happened after setting status to offline

ProblemType: Crash
DistroRelease: Ubuntu 13.04
Package: empathy 3.6.3-0ubuntu4
ProcVersionSignature: Ubuntu 3.8.0-7.15-generic 3.8.0
Uname: Linux 3.8.0-7-generic x86_64
NonfreeKernelModules: wl
ApportVersion: 2.9-0ubuntu2

xsession error 
https://launchpadlibrarian.net/132716368/XsessionErrors.txt
Comment 1 Bilal Shahid 2013-03-19 17:03:09 UTC


  • #0 listing_failed_cb
    at empathy-new-chatroom-dialog.c line 409
  • #1 g_cclosure_marshal_VOID__BOXEDv
    at /build/buildd/glib2.0-2.35.8/./gobject/gmarshal.c line 1160
  • #2 _g_closure_invoke_va
    at /build/buildd/glib2.0-2.35.8/./gobject/gclosure.c line 840
  • #3 g_signal_emit_valist
    at /build/buildd/glib2.0-2.35.8/./gobject/gsignal.c line 3225
  • #4 g_signal_emit
    at /build/buildd/glib2.0-2.35.8/./gobject/gsignal.c line 3370
  • #5 chan_invalidated_cb
    at room-list.c line 415
  • #6 ffi_call_unix64
    at ../src/x86/unix64.S line 76
  • #7 ffi_call
    at ../src/x86/ffi64.c line 522
  • #8 g_cclosure_marshal_generic
    at /build/buildd/glib2.0-2.35.8/./gobject/gclosure.c line 1454
  • #9 g_closure_invoke
    at /build/buildd/glib2.0-2.35.8/./gobject/gclosure.c line 777
  • #10 signal_emit_unlocked_R
    at /build/buildd/glib2.0-2.35.8/./gobject/gsignal.c line 3566
  • #11 g_signal_emit_valist
    at /build/buildd/glib2.0-2.35.8/./gobject/gsignal.c line 3314
  • #12 g_signal_emit
    at /build/buildd/glib2.0-2.35.8/./gobject/gsignal.c line 3370
  • #13 tp_proxy_emit_invalidated
    at proxy.c line 613
  • #14 tp_proxy_invalidate
    at proxy.c line 657
  • #15 tp_channel_closed_cb
    at channel.c line 1290
  • #16 tp_channel_closed_cb
    at channel.c line 1274
  • #17 _tp_cli_channel_invoke_callback_for_closed
    at _gen/tp-cli-channel-body.h line 27
  • #18 tp_proxy_signal_invocation_run
    at proxy-signals.c line 268
  • #19 g_main_dispatch
    at /build/buildd/glib2.0-2.35.8/./glib/gmain.c line 3054
  • #20 g_main_context_dispatch
    at /build/buildd/glib2.0-2.35.8/./glib/gmain.c line 3630
  • #21 g_main_context_iterate
    at /build/buildd/glib2.0-2.35.8/./glib/gmain.c line 3701
  • #22 g_main_context_iteration
    at /build/buildd/glib2.0-2.35.8/./glib/gmain.c line 3762
  • #23 g_application_run
    at /build/buildd/glib2.0-2.35.8/./gio/gapplication.c line 1620
  • #24 main
    at empathy.c line 842

Comment 2 Guillaume Desmottes 2013-05-24 13:30:38 UTC
Created attachment 245242 [details] [review]
new-chatroom-dialog: use tp_g_signal_connect_object()
Comment 3 Xavier Claessens 2013-05-24 13:33:44 UTC
+1
Comment 4 Guillaume Desmottes 2013-05-24 13:34:33 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.
This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.