new-chatroom-dialog: use tp_g_signal_connect_object()

https://bugzilla.gnome.org/show_bug.cgi?id=696151